======================================================================
2008-05-17 Release 0.98.5.3 at r7107 from the branch - JDH

2009-05-13 An optional offset and bbox support in restore_bbox.
           Add animation_blit_gtk2.py. -JJL

2009-05-13 psfrag in backend_ps now uses baseline-alignment
           when preview.sty is used ((default is
           bottom-alignment). Also, a small api imporvement
           in OffsetBox-JJL

2009-05-13 When the x-coordinate of a line is monotonically
           increasing, it is now automatically clipped at
           the stage of generating the transformed path in
           the draw method; this greatly speeds up zooming and
           panning when one is looking at a short segment of
           a long time series, for example. - EF

2009-05-11 aspect=1 in log-log plot gives square decades. -JJL

2009-05-08 clabel takes new kwarg, rightside_up; if False, labels
           will not be flipped to keep them rightside-up.  This
           allows the use of clabel to make streamfunction arrows,
           as requested by Evan Mason. - EF

2009-05-07 'labelpad' can now be passed when setting x/y labels. This
           allows controlling the spacing between the label and its
           axis. - RMM

2009-05-06 print_ps now uses mixed-mode renderer. Axes.draw rasterize
           artists whose zorder smaller than rasterization_zorder.
           -JJL

2009-05-06 Per-artist Rasterization, originally by Eric Bruning. -JJ

2009-05-05 Add an example that shows how to make a plot that updates
           using data from another process.  Thanks to Robert
           Cimrman - RMM

2009-05-05 Add Axes.get_legend_handles_labels method. - JJL

2009-05-04 Fix bug that Text.Annotation is still drawn while set to
           not visible. - JJL

2009-05-04 Added TJ's fill_betweenx patch - JDH

2009-05-02 Added options to plotfile based on question from
           Joseph Smidt and patch by Matthias Michler. - EF

