@@ -31,12 +31,10 @@ def new_figure_manager(num, *args, **kwargs):
 class RendererGTKCairo (backend_cairo.RendererCairo):
     if gtk.pygtk_version >= (2,7,0):
         def set_pixmap (self, pixmap):
-            self.ctx = pixmap.cairo_create()
-            self.ctx.save()  # restore, save  - when call new_gc()
+            self.gc.ctx = pixmap.cairo_create()
     else:
         def set_pixmap (self, pixmap):
-            self.ctx = cairo.gtk.gdk_cairo_create (pixmap)
-            self.ctx.save()  # restore, save  - when call new_gc()
+            self.gc.ctx = cairo.gtk.gdk_cairo_create (pixmap)
 
 
 class FigureCanvasGTKCairo(backend_cairo.FigureCanvasCairo, FigureCanvasGTK):
